too high in practice for busy and/or complex applications. This is mentioned
in the "Breaking changes" section to highlight the change, but it is not
considered breaking in general. The impact is that the "Stack Trace" tab in
the "Span details" view in the Kibana APM app will be empty. This was already
the case for some spans based on span duration. ({pull}2565[#2565])

[float]
===== Features

* Added automatic wrapping of AWS Lambda handlers ({pull}2577[#2577])
* Improvements to AWS Lambda instrumentation: Better `transaction.name` for
  API Gateway-triggered lambdas. Respect explicitly set `serviceName`,
  `serviceVersion`, and `usePathAsTransactionName` config settings. Default
  `cloudProvider: none` and `centralConfig: false` to reduce required
  environment variables for setting up APM instrumentation of Lambdas.
  ({issues}2531[#2531])

[float]
===== Bug fixes


[[release-notes-3.29.0]]
==== 3.29.0 2022/02/10

* Fix a bug in instrumentation of `@elastic/elasticsearch` that caused a
  memory leak. ({issues}2569[#2569])


[[release-notes-3.28.0]]
==== 3.28.0 2022/02/08

Known issue: This release includes a memory leak in instrumentation of the
`@elastic/elasticsearch` package. If you use that package, you should not
use v3.28.0 of this APM agent. ({issues}2569[#2569])

[float]
===== Breaking changes

The following changes are not considered *breaking*. However, they result in
a change in behavior and trace output that might impact some users, so they
are highlighted here.

* Change the `redis` and `mysql` instrumentations to not patch at all if
  they are listed in <<disable-instrumentations, `disableInstrumentations`>>.
  This means that an application that uses one of these packages *and* lists
  that package in `disableInstrumentations` could see changes in the async
  run-context of callbacks.  See {issues}2498[#2498] and the
  <<release-notes-3.26.0,v3.26.0 release notes>> which has a similar change.
